Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.4.0-rc1
-
Ubuntu 12.04 32bit
-
1de7c954efa8ed563f02be36df21f86adb3ed485
Description
Steps to reproduce:
- make sure you have at least 1 Qt and 2 compilers in PATH (I've got /usr/lib/icecc/bin/gcc and /usr/bin/clang which are automatically listed in QC settings)
- start QC with clean settings (or -settingspath XYZ)
- go to Tools -> Options -> Build & Run -> Compilers
- check that both compilers have been detected
- switch to Kits page and check the default created kit
Current result:
- compiler combo is disabled
Expected result:
- compiler combo can be used (worked until 4334c119cfefb7ef41c)
Attachments
For Gerrit Dashboard: QTCREATORBUG-14138 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
108636,3 | ToolChain: Make toolchain combobox in kits active again | 3.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |