ToolChain: Make toolchain combobox in kits active again

Task-number: QTCREATORBUG-14138
Change-Id: I33656e75456832e53cf0b68d319213ea51f3907a
Reviewed-by: Christian Stenger <christian.stenger@theqtcompany.com>